--- a/hello.ipynb
+++ b/hello.ipynb
@@ -79,15 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Сложность N\n",
     "def strcounter3(s):\n",
     "    syms_c = {}\n",
-    "    if sub_sym in s:\n",
-    "        syms_counter[sub_sym] = syms_counter.get(sub_sym,0)+1\n",
+    "    for sub_sym in s:\n",
+    "        syms_c[sub_sym] = syms_c.get(sub_sym,0)+1\n",
     "    for sym,count in syms_c.items():\n",
     "        print(sym,count)"
    ]
@@ -112,32 +112,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "a 7\n",
+      "b 1\n",
       "c 5\n",
       "d 7\n",
-      "g 2\n",
-      "A 2\n",
+      "s 4\n",
       "f 2\n",
+      "g 2\n",
+      "h 1\n",
       "D 4\n",
+      "A 2\n",
       "S 3\n",
       "F 2\n",
-      "h 1\n",
-      "b 1\n",
-      "H 1\n",
-      "a 7\n",
-      "s 4\n"
+      "H 1\n"
      ]
     }
    ],
    "source": [
     "str = \"aaaabccadssfasdgdfghasDASDFSDFHASDcccdddd\"\n",
-    "strcounter2(str)"
+    "strcounter3(str)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "git config --global user.name \"Your Name\"\n",
+    "git config --global user.email \"Your Email\"\n",
+    "git config --list\n",
+    "\n",
+    "git init\n",
+    "git add .\n",
+    "git commit -m \"Initial commit\"\n",
+    "git remote add origin https://github.com/eComSt/test42.git\n",
+    "git branch -M main\n",
+    "git push -u origin main"
    ]
   }
  ],
